Fixing regression with Experience page <ul> spacing

--- a/css/page-specific/experience.css
+++ b/css/page-specific/experience.css
@@ -8,7 +8,7 @@ main h1, main h2 {
     text-align: center;
 }
 ul {
-    margin-top: 0rem;
+    margin-bottom: 6rem;
     padding-left: 0px;
     max-width: 1200px;
     text-align: center;
